--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,8 +1,23 @@
 {
+  "name": "student",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+
   "dependencies": {
     "axios": "^1.13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.3"
+  },
+
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
